force-app/main/default/objects/Fee_Matrix__mdt/Fee_Matrix__mdt.object-meta.xml
<CustomObject>
    <description>Statutory fee table. Drives Fee__c on the application so amounts are configuration rather than hard-coded Apex. Money fields are Number because custom metadata types do not support the Currency type.</description>
    <label>Fee Matrix</label>
    <pluralLabel>Fee Matrix</pluralLabel>
</CustomObject>