force-app/main/default/objects/Fee_Matrix__mdt/fields/Additional_Booklet_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_Booklet_Fee__c</fullName>
    <label>Additional Booklet Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>