force-app/main/default/objects/Fee_Matrix__mdt/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <description>Matches the Passport_Application__c record type developer name.</description>
    <label>Application Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Re_Issue</fullName>
            </value>
            <value>
                <fullName>Tatkal</fullName>
            </value>
            <value>
                <fullName>Minor</fullName>
            </value>
            <value>
                <fullName>Lost_Damaged</fullName>
            </value>
            <value>
                <fullName>Diplomatic_Official</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>