force-app/main/default/objects/Fee_Matrix__mdt/fields/Booklet_Pages__c.field-meta.xml
<CustomField>
    <fullName>Booklet_Pages__c</fullName>
    <label>Booklet Pages</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>