force-app/main/default/objects/Fee_Matrix__mdt/fields/Tatkal_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Tatkal_Surcharge__c</fullName>
    <description>Added when the application is flagged Tatkal.</description>
    <label>Tatkal Surcharge</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>